src/objects/Asset.object
<CustomObject>
    <fields>
        <fullName>CS_Rating_Mgr_Lic_Date__c</fullName>
        <label>Rating Mgr Lic Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_Rating_Mgr_License__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rating Mgr License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Record_Type_Name__c</fullName>
        <description>Asset Record Type Name</description>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>AMER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Regional_Alliances_Manager__c</fullName>
        <formula>Account.Regional_Alliance_Manager__r.FirstName + &quot; &quot; + Account.Regional_Alliance_Manager__r.LastName</formula>
        <label>Regional Alliances Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Reinsurance_Lic_Date__c</fullName>
        <label>Reinsurance Lic Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_Reinsurance_License__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reinsurance License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Related_InsuranceSuite_products__c</fullName>
        <inlineHelpText>This is a list of InsuranceSuit core products that are associated with this asset.</inlineHelpText>
        <label>Related InsuranceSuite products</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Replication_details__c</fullName>
        <label>Replication details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CS_Reporting_Requirements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reporting Requirements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_RightNow_City__c</fullName>
        <label>RightNow City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_RightNow_Country__c</fullName>
        <label>RightNow Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_RightNow_ID__c</fullName>
        <externalId>true</externalId>
        <label>RightNow ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CS_RightNow_Postal_Code__c</fullName>
        <label>RightNow Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_RightNow_Production_Version__c</fullName>
        <label>RightNow Production Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_RightNow_State_Prov__c</fullName>
        <label>RightNow State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_RightNow_Street__c</fullName>
        <label>RightNow Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CS_SBOP_Core_Count__c</fullName>
        <label>SBOP Core Count</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_SC_Weekly_Call__c</fullName>
        <description>When does the regular check-in call occur, usually on a weekly basis</description>
        <inlineHelpText>When does the regular check-in call occur, usually on a weekly basis</inlineHelpText>
        <label>CE Call</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CS_SLA_Comment__c</fullName>
        <label>SLA Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CS_SVN_Upload_Date__c</fullName>
        <label>Config Deployed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_SaaS_Url__c</fullName>
        <description>****SaaS Url*****</description>
        <formula>Product2.CS_SaaS_Url__c</formula>
        <label>SaaS Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Saas_Case_Url__c</fullName>
        <formula>Product2.SaaS_My_Cases_URL__c</formula>
        <label>Saas Case Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Saas_Documentation_Url__c</fullName>
        <formula>Product2.SaaS_Documentation_URL__c</formula>
        <label>Saas Documentation Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Sec_Support_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sec. Support Partner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assets3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CS_Secondary_PM1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary PM1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assets8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CS_Secondary_PM2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary PM2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assets2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CS_Server_Side_Virtualization_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Are serverside virtual machines used?</description>
        <label>Server Side Virtualization Used?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Service_Level__c</fullName>
        <inlineHelpText>Serivce Level Agreement selected when Contract was signed with Guidewire</inlineHelpText>
        <label>Service Level</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Services_Acct_Mgr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User look up for services manager.</description>
        <inlineHelpText>Services Account Manager</inlineHelpText>
        <label>Services Acct Mgr</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CS_Services_Alliances_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Services Alliances Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CS_SolnCenter_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SolnCenter Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assetsmv39</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CS_Solution_Owners_By_Contract__c</fullName>
        <description>Solution owners Allowed  by Contract</description>
        <label>Solution Owners  By Contract</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CS_Spotlight_App_Date__c</fullName>
        <label>Spotlight App Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_Spotlight_App__c</fullName>
        <label>Spotlight App</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Support_Group__c</fullName>
        <label>Support Group</label>
        <picklist>
            <picklistValues>
                <fullName>Policy System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claim System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Predictive Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Portals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GW Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cognos</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Support_Trans_Date__c</fullName>
        <inlineHelpText>This is the date that the process for transitioning to support begins</inlineHelpText>
        <label>Intro to Support Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_Thunder_Head_License__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Child Asset-3rd party</description>
        <label>Thunder Head License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Thunderhead_License_Date__c</fullName>
        <label>Thunderhead License Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_TimeZone__c</fullName>
        <label>TimeZone</label>
        <picklist>
            <picklistValues>
                <fullName>GMT+1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT+10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT+11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT+12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT+2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT+3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT+4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT+5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT+5.5 (India)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT+7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT+8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT+9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT-4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT-6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT-7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT-8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Business Hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT+6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT-7 (Arizona)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT+13</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_URL_SVN__c</fullName>
        <label>Config. URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CS_Version__c</fullName>
        <formula>CS_Product_Version__r.CS_Version__c+&apos; &apos;+BLANKVALUE(TEXT(CS_Product_Version__r.CS_Patch_Version__c),&apos;&apos;)</formula>
        <inlineHelpText>Product Version</inlineHelpText>
        <label>Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_View_Cases__c</fullName>
        <formula>HYPERLINK(
CASE($User.ProfileId,
 $Setup.CS_Profile_Id__c.CS_Customer_Profile__c ,&quot;/customer/s/customer-case-list-view&quot;,
 $Setup.CS_Profile_Id__c.CS_Partner_Profile__c,&quot;/GWPartners/s/partner-case-list-view&quot;,
&quot;/500/o&quot;),
IMAGE(Image_Url__c&amp;&quot;Case&quot;,&apos;Case&apos;),
&apos;_self&apos;)</formula>
        <label>View Case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_View_Contacts__c</fullName>
        <formula>HYPERLINK(
CASE($User.ProfileId, $Setup.CS_Profile_Id__c.CS_Customer_Profile__c ,&quot;/customer/s/relatedlist/&quot;&amp;Id &amp;&quot;/Asset_Contacts__r&quot;, $Setup.CS_Profile_Id__c.CS_Partner_Profile__c ,&quot;/GWPartners/s/relatedlist/&quot;&amp;Id &amp;&quot;/Asset_Contacts__r&quot;,&quot;/&quot;&amp;Id)
,
IMAGE(Image_Url__c&amp;&quot;Contact&quot;,&apos;Contacts&apos;),
&apos;_self&apos;)</formula>
        <label>View Contacts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_View_Documentation__c</fullName>
        <formula>HYPERLINK(
CASE($User.ProfileId,
 $Setup.CS_Profile_Id__c.CS_Customer_Profile__c ,&quot;/customer/s/resources&quot;,
 $Setup.CS_Profile_Id__c.CS_Partner_Profile__c ,&quot;/GWPartners/s/partner-resources&quot;,
&quot;/a6u/o&quot;),
IMAGE(Image_Url__c&amp;&quot;Documentation&quot;,&apos;Documentation&apos;),
&apos;_self&apos;)</formula>
        <label>View Documentation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_View_Download__c</fullName>
        <formula>HYPERLINK(Base_Url__c&amp;&apos;s/relatedlist/&apos;&amp;Id &amp;&apos;/Software_Downloads__r&apos;,
IMAGE(Image_Url__c&amp;&quot;DownloadBtn&quot;,&apos;Downloads&apos;),
&apos;_self&apos;)</formula>
        <label>View Download</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Weekly_Call__c</fullName>
        <label>Support Call Schedule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Catastrophe_App__c</fullName>
        <label>Catastrophe App</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_side_virtualization_product_used__c</fullName>
        <description>If client side virtualization product is used, what is the product?</description>
        <label>Client side virtualization product used</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Pass__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Pass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Image_Url__c</fullName>
        <formula>CASE($User.ProfileId, $Setup.CS_Profile_Id__c.CS_Customer_Profile__c ,&quot;/customer/resource/&quot;,  $Setup.CS_Profile_Id__c.CS_Partner_Profile__c ,&quot;/GWPartners/resource/&quot;,&quot;/resource/&quot;)</formula>
        <label>Image Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>IMAGE(
CASE(Product2.Product__r.Name,
&quot;BillingCenter&quot;,Image_Url__c&amp;&quot;BillingCenter&quot;, 
&quot;ClaimCenter&quot;,Image_Url__c&amp;&quot;ClaimCenter&quot;, 
&quot;PolicyCenter&quot;,Image_Url__c&amp;&quot;PolicyCenter&quot;,
&quot;DataHub&quot;,Image_Url__c&amp;&quot;DataHub&quot;, 
&quot;InfoCenter&quot;,Image_Url__c&amp;&quot;InfoCenter&quot;,
Image_Url__c&amp;&quot;NoImages&quot;),&quot;Product&quot;)</formula>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Hosted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Hosted ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <picklist>
            <picklistValues>
                <fullName>Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Perpetual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subscription</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MyAgents_App__c</fullName>
        <label>MyAgents App</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assetsmu4f</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__AdditionalDiscountAmount__c</fullName>
        <description>Additional Discount for this Asset, if expressed as an amount</description>
        <inlineHelpText>Additional Discount for this Asset, if expressed as an amount</inlineHelpText>
        <label>Additional Disc. (Amt)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__Bundle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this line item represents a package; meaning, it includes other line items in this quote.</description>
        <inlineHelpText>Indicates whether this line item represents a package; meaning, it includes other line items in this quote.</inlineHelpText>
        <label>Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__BundledQuantity__c</fullName>
        <description>For items with calculated quantities this field hold the original (user entered) quantity.</description>
        <inlineHelpText>For items with calculated quantities this field holds the original quantity entered by the user.</inlineHelpText>
        <label>Original Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Bundled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the product on this line item is bundled (included) by another product in this quote. Bundled lines items are zero price and do not allow price or quantity to be edited.</description>
        <inlineHelpText>Indicates the product on this line item is bundled (included) by another product in this quote. Bundled lines items have a zero price and do not allow price or quantity to be edited.</inlineHelpText>
        <label>Bundled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CombineKey__c</fullName>
        <externalId>true</externalId>
        <label>Combine Key</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentDiscountedByPackage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fixes additional discount for this component to the parent package discount.</description>
        <inlineHelpText>Fixes additional discount for this component to the parent package discount.</inlineHelpText>
        <label>Component Discounted By Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CreditProductId__c</fullName>
        <description>ID of upgrade credit product for this asset.</description>
        <formula>Product2.SBQQ__UpgradeCredit__c</formula>
        <label>Credit Product Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__CurrentSubscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Subscription that currently covers this asset. This field is only populated if one and only one subscription covers this asset. Renewals will overwrite with new subscription.</description>
        <inlineHelpText>Subscription that currently covers this asset. Automatically populated if one and only one subscription covers this asset. Renewals will overwrite with new subscription.</inlineHelpText>
        <label>Current Subscription</label>
        <referenceTo>SBQQ__Subscription__c</referenceTo>
        <relationshipLabel>Covered Assets</relationshipLabel>
        <relationshipName>CoveredAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Dimension__c</fullName>
        <description>Name of the Price Dimension that originated this Asset</description>
        <formula>SBQQ__QuoteLine__r.SBQQ__Dimension__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Name of the Price Dimension that originated this Asset</inlineHelpText>
        <label>Price Dimension</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountScheduleType__c</fullName>
        <description>Discount schedule type. Must be a stored value because it&apos;s used in formula fields that are rolled up.</description>
        <inlineHelpText>Discount schedule type. Copied from Type field in associated discount schedule.</inlineHelpText>
        <label>Discount Schedule Type</label>
        <picklist>
            <picklistValues>
                <fullName>Range</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slab</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specify discounts in terms of % or Amt to be discounted off the product&apos;s price using quantity purchased or term. Set quantity/term ranges in tiers of different discount %. Discount is applied to List Price &amp; resulting total is stored in the Regular Price</description>
        <inlineHelpText>Specify discounts in terms of % or Amt to be discounted off the product&apos;s price using quantity purchased or term. Set quantity/term ranges in tiers of different discount %. Discount is applied to List Price &amp; resulting total is stored in the Regular Price</inlineHelpText>
        <label>Discount Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Discount__c</fullName>
        <description>Additional Discount for this Asset, if expressed as a percentage</description>
        <inlineHelpText>Additional Discount for this Asset, if expressed as a percentage</inlineHelpText>
        <label>Additional Disc. (%)</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__DistributorDiscount__c</fullName>
        <description>Discount to be taken on top of the Partner Discount.</description>
        <inlineHelpText>Discount to be taken on top of the Partner Discount.</inlineHelpText>
        <label>Distributor Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__DynamicOptionId__c</fullName>
        <description>Contains feature id and product id to identify the feature and optional SKU associated with this line.</description>
        <inlineHelpText>Identifies feature and dynamic option for this line.</inlineHelpText>
        <label>Dynamic Option ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__FromServiceCloud__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether Service Cloud was enabled when this Asset was created.</description>
        <inlineHelpText>Determines whether Service Cloud was enabled when this Asset was created.</inlineHelpText>
        <label>From Service Cloud</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__LatestQuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Latest Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Assets (Latest Quote Line)</relationshipLabel>
        <relationshipName>Assets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__ListPrice__c</fullName>
        <description>List price for this Asset product.</description>
        <inlineHelpText>List price for this Asset product.</inlineHelpText>
        <label>List Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__MarkupAmount__c</fullName>
        <description>Markup for this Asset, if expressed as an amount</description>
        <inlineHelpText>Markup for this Asset, if expressed as an amount</inlineHelpText>
        <label>Markup (Amt)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__MarkupRate__c</fullName>
        <description>Markup for this Asset, if expressed as a percentage</description>
        <inlineHelpText>Markup for this Asset, if expressed as a percentage</inlineHelpText>
        <label>Markup (%)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__Number__c</fullName>
        <description>Number indicating this line&apos;s position within its group or quote.</description>
        <inlineHelpText>Number indicating this line&apos;s position within its group or quote.</inlineHelpText>
        <label>Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__OptionDiscountAmount__c</fullName>
        <description>Discount extended on this product because it&apos;s part of a package.</description>
        <inlineHelpText>Discount extended on this product because it&apos;s part of a package.</inlineHelpText>
        <label>Option Discount (Amt)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__OptionDiscount__c</fullName>
        <description>If this line is for an optional SKU, this field captures any discount given to the package and extended to the option.</description>
        <inlineHelpText>If this line is for an optional SKU, this field captures any discount given to the package and extended to the option.</inlineHelpText>
        <label>Option Discount (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__OptionLevel__c</fullName>
        <description>Indicates nest level of this option (only applies to lines that are generated from options).</description>
        <inlineHelpText>Indicates nest level of this option (only applies to lines that are generated from options).</inlineHelpText>
        <label>Option Level</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__OptionType__c</fullName>
        <description>Indicates the Option Type, which is copied from related Product Option. Determines how quantity is calculated.</description>
        <inlineHelpText>Indicates the Option Type, which is copied from related Product Option. Determines how quantity is calculated.</inlineHelpText>
        <label>Option Type</label>
        <picklist>
            <picklistValues>
                <fullName>Component</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accessory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Related Product</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBQQ__OrderProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__OriginalUnitCost__c</fullName>
        <description>Original unit cost of the Asset at the time of purchase before Cost Schedules were applied.</description>
        <inlineHelpText>Original unit cost of the Asset at the time of purchase before Cost Schedules were applied.</inlineHelpText>
        <label>Original Unit Cost</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__PartnerDiscount__c</fullName>
        <description>Partner discounts are applied after all automatic and discretionary discounts. The partner discount is taken into account in the Partner Price.</description>
        <inlineHelpText>Partner discounts are applied after all automatic and discretionary discounts. The partner discount is taken into account in the Partner Price.</inlineHelpText>
        <label>Partner Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__PricingMethod__c</fullName>
        <description>Determines how the price for this line item is set. &quot;List&quot; = calculated by subtracting discount from list price. &quot;Cost&quot;  = calculated by adding markup to cost.</description>
        <inlineHelpText>Indicates how the price for this line item is calculated. &quot;List&quot; = subtracting discount from list price. &quot;Cost&quot; = adding markup to cost.</inlineHelpText>
        <label>Pricing Method</label>
        <picklist>
            <picklistValues>
                <fullName>List</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Block</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percent Of Total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductOption__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product option that generated this line (if any).</description>
        <inlineHelpText>Product option that generated this line (if any).</inlineHelpText>
        <label>Product Option</label>
        <referenceTo>SBQQ__ProductOption__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote line that generated this asset.</description>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RegularPrice__c</fullName>
        <description>Regular Price for this Asset.</description>
        <inlineHelpText>Regular Price for this Asset.</inlineHelpText>
        <label>Regular Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalUpliftRate__c</fullName>
        <description>Rate of renewal price increases.</description>
        <label>Renewal Uplift (%)</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
</CustomObject>